# Cointoss

./: Dockerfile  README.md  app.py  pyproject.toml
collectors/: __init__.py  mlb_collector.py  nba_collector.py  nfl_collector.py  nhl_collector.py
predictor/: __init__.py  sports_predictor.py
