[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cointoss"
version = "0.1.0"
description = "A Streamlit app for predicting sports outcomes using machine learning."
authors = [{ name = "Jasper Markarian" }]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "streamlit",
    "requests",
    "plotly",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.black]
line-length = 88
target-version = ['py312']
